# gpu-experimentations

./: .gitignore  README.md
.github/: FUNDING.yml
.github/docker/: ub_pyenv.dockerfile  ub_pyenv.dockerfile.v1.deprecated
.github/workflows/: build-ub-pyenv-image.yaml  ci_asic_19.yaml
experiments/: .gitignore
experiments/11_matrix_cuda/: build_and_run.bash  driver.cpp  naive_mat.cu  readme.md  runtime_profiling_reporter.h
experiments/11_matrix_cuda/scripts/: build_and_run.bash  graph_run_times.py
experiments/11_matrix_cuda/src/: experiment_driver.cu  naive_matmul.cu  profilers.h  runtime_profiling_reporter.h
experiments/12_fpga_aws/: readme.txt
experiments/13_cuda_sharedmem/: readme.md
experiments/14_minisa1/: build-script.bash  dev-notes.md  minisa01.td  minisa01_instr_info.td  minisa01_register_info.td  readme.md
experiments/15_mipi_adventures_1/fpga_opticflow_poc/: lcflow.py  lcflow2.py  simulate.py  streamlc.py  test_lk_kernel.py  winbuffer3x2.py  winbufferfulldual.py
experiments/16_ll_lean4_revisit/: .gitignore  Linlog.lean  Linlog1proj.lean  LinlogMy.lean  MathPads.lean  README.md  lake-manifest.json  lakefile.lean  lakefile.toml  linlog.code-workspace
experiments/16_ll_lean4_revisit/Linlog1proj/: Main.lean
experiments/16_ll_lean4_revisit/LinlogMy/: Basic.lean
experiments/16_ll_lean4_revisit/MathPads/: BoltzmannMaxEnt.lean
experiments/16_ll_lean4_revisit/scripts/: readme.md  workspace-env.bash  workspace-rc.bash
experiments/16_ll_lean4_revisit/simply/: ll1.lean
experiments/17_openmp/: run-and-time.bash
experiments/18_openmp/: build-and-profiling.bash  experiment_driver.cu  experiment_driver.hpp  histogram.hpp  openmp_features_1.cpp  plot_profiling_graph.py  practice_tm1.cpp  profilers.h  profilers.hpp  rng_skipahead_v1.cpp  rng_skipahead_v2.cpp  runtime_profiling_reporter.h  runtime_profiling_reporter.hpp
experiments/18_openmp/bayesian_network_oflow_1/: readme.md
experiments/19_asic_lane/: neurasic1.v  readme.md
experiments/20_slang_shaders/: readme.md  steps-taken.sh
experiments/20_slang_shaders/myshaders/: package.json
experiments/21_cuda_another_warmup_exercise/: .gitignore  CMakeLists.txt  cpp_test1.cpp  readmd.md  session_history.txt
experiments/21_cuda_another_warmup_exercise/scripts/: build.bash  code-workspace.yaml  dev.bash
experiments/3tvm/: clone_and_build_tvm.bash
experiments/4leannet1/: lnet1.lean  patch_bashrc.sh  provision_lean4.bash  refresh-ssh-agent.bash_source  rerun-ssh-agent.bash
experiments/4triton/: readme.md
experiments/6_cuda_rggbuff/: build.ps1  host_main.cpp  mykernel.cu
experiments/7_mlir/: .gitignore  ansi_colors.env.bash  in-mlir.bash  readme.md  simple.mlir
experiments/7_mlir/tablegen-example-1/: CMakeLists.txt  mydialect.cpp  myops.cpp  myops.td  run_build.bash
experiments/7_mlir/tablegen-example-1/test/: test.mlir
experiments/8_mlir_nn/: readme.md  single_layer_perceptron.mlir
experiments/9_mlir_neo_refactor/: build-and-test.bash  loop_vector_computation.ll
experiments/leannn5/: Leannn5.lean  lake-manifest.json  lakefile.lean  learnin-lean4.md
experiments/raw-llvm/: 1-trivial-add.bash  1-trivial-add.llvm
experiments/raw1/: localmachine-installation.bash  localmachine-tfinit.bash  paperspace_gpu_experiment_terraform.tf  tfconfig.tfvars
provisioning_scripts/: patch_bashrc.sh
provisioning_scripts/cpp_lsp_support/: backup_vcsode_settings_jsonfile.bash.source  cpp-lsp-support.bash  lsp_cpp_clangd_server_cli_run.bash  readme.md
provisioning_scripts/includes/: ansi_colors.env.bash  gitrepo_root.bash
provisioning_scripts/mlir_env/: build.bash  mlir_env.bash
provisioning_scripts/terraform/: readme.md
(+42 files in other folders)
